snapshots/parsers/cst/declarations/declare_with_alias.snap
---
source: src/parsers/cst/declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DeclareStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: DeclareKeyword
          text: Declare
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CopyMemory
        - kind: Whitespace
          text: " "
        - kind: LibKeyword
          text: Lib
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"kernel32\""
        - kind: Whitespace
          text: " "
        - kind: AliasKeyword
          text: Alias
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"RtlMoveMemory\""
        - kind: Whitespace
          text: " "
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: ByRefKeyword
              text: ByRef
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: Dest
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: Any
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: ByRefKeyword
              text: ByRef
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: Source
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: Any
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: ByValKeyword
              text: ByVal
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: Bytes
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: LongKeyword
              text: Long
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
