snapshots/parsers/cst/declarations/event_object_parameter.snap
---
source: src/parsers/cst/declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EventStatement
      children:
        - kind: EventKeyword
          text: Event
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ItemAdded
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: ByValKeyword
              text: ByVal
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: Item
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: ObjectKeyword
              text: Object
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
