snapshots/parsers/cst/declarations/event_preserves_whitespace.snap
---
source: src/parsers/cst/declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: EventStatement
      children:
        - kind: EventKeyword
          text: Event
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Test
        - kind: Whitespace
          text: "    "
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Whitespace
              text: "    "
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
